--- a/public/css/photos.css
+++ b/public/css/photos.css
@@ -8,6 +8,8 @@
   -moz-column-gap:      1px;
   column-count:         5;
   column-gap:           1px;  
+  padding-right:        15px;
+  padding-left:         15px;
 }
 
 #photos img {
