--- a/public/css/photos.css
+++ b/public/css/photos.css
@@ -10,6 +10,7 @@
   column-gap:           1px;  
   padding-right:        15px;
   padding-left:         15px;
+  background-color:     black;
 }
 
 #photos img {
